# opensearch-embedding-visualizer

./: Dockerfile  FEATURES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
opensearch_visualizer/: __init__.py  config.py  filters.py  main.py  models.py  opensearch_client.py  visualizer.py
scripts/: generate_sample_data.py  run_visualizer.py  setup_demo.sh
