[tool.poetry]
name = "opensearch-vector-visualizer"
version = "0.1.0"
description = "Advanced embedding visualizer for OpenSearch with 3D visualization and filtering capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "opensearch_visualizer"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.28.0"
plotly = "^5.17.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
umap-learn = "^0.5.4"
opensearch-py = "^2.4.0"
streamlit-plotly-events = "^0.0.6"
extra-streamlit-components = "^0.1.60"
streamlit-aggrid = "^0.3.4"
pydantic = "^2.4.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
faker = "^22.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
opensearch-visualizer = "opensearch_visualizer.main:main"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true